[package]
name = "linkoftrust"
version = "1.0.0"
authors = ["Thomas BOLTEAU <thomas.bolteau50@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.4"
near-sdk = {version="5.7.0",  features = ["unit-testing"] }
uint = { version = "0.10.0", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
schemars = "0.8.6"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []

