[package]
name = "linkoftrust"
version = "1.0.0"
authors = ["Thomas BOLTEAU <thomas.bolteau50@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.4"
near-sdk = {version="5.7.0",  features = ["unit-testing"] }
uint = { version = "0.10.0", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
schemars = "0.8.6"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []

[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.13.4-rust-1.85.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:a9d8bee7b134856cc8baa142494a177f2ba9ecfededfcdd38f634e14cca8aae2"
# list of environment variables names, whose values, if set, will be used as external build parameters
# in a reproducible manner
# supported by `sourcescan/cargo-near:0.10.1-rust-1.82.0` image or later images
passed_env = []
# build command inside of docker container 
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]